# cdt-cloud-blueprint

./: install-openocd.md  package.json
applications/browser/: package.json
applications/docker/: package.json
applications/electron/: package.json  webpack.config.js
theia-extensions/blueprint-example-generator/: package.json
theia-extensions/blueprint-example-generator/resources/.theia/: launch.json  settings.json  tasks.json
theia-extensions/blueprint-example-generator/resources/pico-blink/blink/: CMakeLists.txt  README.md
theia-extensions/blueprint-example-generator/resources/pico-blink/blink/src/: blink.c
theia-extensions/blueprint-example-generator/resources/pico-dooropener/dooropener/: CMakeLists.txt  README.md
theia-extensions/blueprint-example-generator/resources/pico-dooropener/dooropener/src/: dooropener.c
theia-extensions/blueprint-example-generator/src/browser/: example-generator-contribution.ts
theia-extensions/blueprint-example-generator/src/common/: protocol.ts
theia-extensions/blueprint-example-generator/src/node/: example-generator-service.ts
theia-extensions/blueprint-examples/: package.json
theia-extensions/blueprint-examples/resources/blink/: .pico-project  additional_imports.cmake
theia-extensions/blueprint-examples/resources/empty/: .gitignore  README.md
theia-extensions/blueprint-examples/src/browser/: blueprint-examples-frontend-contribution.ts
theia-extensions/blueprint-examples/src/common/: cdt-blueprint-examples.ts
theia-extensions/blueprint-examples/src/node/: blueprint-examples-contribution.ts
theia-extensions/cdt-cloud-pico/: package.json
theia-extensions/cdt-cloud-pico/src/browser/: frontend-contribution.ts  frontend-module.ts  label-provider.ts  preferences.ts  project-command-contribution.ts  toolbar-contribution.ts
theia-extensions/cdt-cloud-pico/src/common/: project-service.ts  project-types.ts
theia-extensions/cdt-cloud-pico/src/node/: backend-module.ts
theia-extensions/pico-support/: package.json  tsconfig.json
theia-extensions/pico-support/src/browser/: frontend-module.ts  label-provider.ts  project-command-contribution.ts
theia-extensions/theia-blueprint-product/: package.json
theia-extensions/theia-blueprint-updater/: package.json
(+52 files in other folders)
